# geohash

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  index.html  search-index.js
.github/workflows/: test.yml
benches/: base.rs
geo/: enum.Geometry.html  index.html  sidebar-items.js  struct.Coordinate.html  struct.GeometryCollection.html  struct.LineString.html  struct.MultiLineString.html  struct.MultiPoint.html  struct.MultiPolygon.html  struct.Point.html  struct.Polygon.html  trait.ToGeo.html
geo/algorithm/: index.html  sidebar-items.js
geo/algorithm/centroid/: index.html  sidebar-items.js  trait.Centroid.html
geo/traits/: enum.Geometry.html  sidebar-items.js  trait.ToGeo.html
geo/types/: sidebar-items.js  struct.Coordinate.html  struct.GeometryCollection.html  struct.LineString.html  struct.MultiLineString.html  struct.MultiPoint.html  struct.MultiPolygon.html  struct.Point.html  struct.Polygon.html
geohash/: fn.decode.html  fn.decode_bbox.html  fn.encode.html  index.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.Neg.js  trait.Sub.js
implementors/geo/algorithm/centroid/: trait.Centroid.js
src/: core.rs  error.rs  lib.rs  neighbors.rs
src/geo/: lib.rs.html  traits.rs.html  types.rs.html
src/geo/algorithm/: centroid.rs.html  mod.rs.html
src/geohash/: lib.rs.html
tests/: base.rs  testcases.csv
