[package]

name = "geohash"
version = "0.10.1-alpha.0"
authors = [ "Ning Sun <sunng@about.me>" ]
description = "Geohash implementation for Rust."
license = "MIT/Apache-2.0"
keywords = ["geohash", "gis", "geography"]
repository = "https://github.com/georust/geohash.rs"
readme = "README.md"
documentation = "https://docs.rs/geohash/"
edition = "2018"

[dependencies]
geo-types = "0.6.0"

[dev-dependencies]
num-traits = "0.2"
