[package]

name = "geohash"
version = "0.11.1-alpha.0"
authors = [ "Ning Sun <sunng@about.me>" ]
description = "Geohash implementation for Rust."
license = "MIT/Apache-2.0"
keywords = ["geohash", "gis", "geography"]
repository = "https://github.com/georust/geohash.rs"
readme = "README.md"
documentation = "https://docs.rs/geohash/"
edition = "2018"

[dependencies]
geo-types = ">=0.6.0, <0.8.0"
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"

[dev-dependencies]
num-traits = "0.2"
