[package]
name = "geohash"
version = "0.13.0"
authors = [ "Ning Sun <sunng@about.me>" ]
description = "Geohash implementation for Rust."
license = "MIT/Apache-2.0"
keywords = ["geohash", "gis", "geography"]
categories = [ "science::geo" ]
repository = "https://github.com/georust/geohash.rs"
readme = "README.md"
documentation = "https://docs.rs/geohash/"
edition = "2018"

[dependencies]
geo-types = ">=0.6.0, <0.8.0"
libm = "0.2.6"

[dev-dependencies]
csv = "1.2"
num-traits = "0.2"
serde = {version = "1", features = ["derive"]}
